Added model registry and prediction

--- a/4_model_training.ipynb
+++ b/4_model_training.ipynb
@@ -136,9 +136,9 @@
        "      <td>-0.095551</td>\n",
        "      <td>...</td>\n",
        "      <td>1.292511</td>\n",
-       "      <td>0.494340</td>\n",
+       "      <td>0.49434</td>\n",
        "      <td>-0.629129</td>\n",
-       "      <td>-0.946770</td>\n",
+       "      <td>-0.94677</td>\n",
        "      <td>1.251215</td>\n",
        "      <td>-1.073768</td>\n",
        "      <td>-1.719523</td>\n",
@@ -153,7 +153,7 @@
        "      <td>1662584400000</td>\n",
        "      <td>0.809041</td>\n",
        "      <td>1.236292</td>\n",
-       "      <td>-0.415810</td>\n",
+       "      <td>-0.41581</td>\n",
        "      <td>-2.566292</td>\n",
        "      <td>-0.047795</td>\n",
        "      <td>0.430394</td>\n",
@@ -162,7 +162,7 @@
        "      <td>-0.875157</td>\n",
        "      <td>-0.986137</td>\n",
        "      <td>-0.688734</td>\n",
-       "      <td>1.135370</td>\n",
+       "      <td>1.13537</td>\n",
        "      <td>-1.721077</td>\n",
        "      <td>0.602495</td>\n",
        "      <td>0.423267</td>\n",
@@ -181,7 +181,7 @@
        "      <td>0.723045</td>\n",
        "      <td>0.167284</td>\n",
        "      <td>-0.295896</td>\n",
-       "      <td>0.686230</td>\n",
+       "      <td>0.68623</td>\n",
        "      <td>...</td>\n",
        "      <td>-0.610403</td>\n",
        "      <td>-0.512995</td>\n",
@@ -190,7 +190,7 @@
        "      <td>-0.321398</td>\n",
        "      <td>-1.937297</td>\n",
        "      <td>-0.079925</td>\n",
-       "      <td>-0.048770</td>\n",
+       "      <td>-0.04877</td>\n",
        "      <td>0.285561</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -200,8 +200,8 @@
        "      <td>8</td>\n",
        "      <td>1662584400000</td>\n",
        "      <td>-0.764249</td>\n",
-       "      <td>1.280870</td>\n",
-       "      <td>-0.415810</td>\n",
+       "      <td>1.28087</td>\n",
+       "      <td>-0.41581</td>\n",
        "      <td>-0.949035</td>\n",
        "      <td>-0.262875</td>\n",
        "      <td>-0.295896</td>\n",
@@ -229,7 +229,7 @@
        "      <td>0.997157</td>\n",
        "      <td>0.167284</td>\n",
        "      <td>-0.295896</td>\n",
-       "      <td>0.686230</td>\n",
+       "      <td>0.68623</td>\n",
        "      <td>...</td>\n",
        "      <td>-0.701412</td>\n",
        "      <td>-0.757197</td>\n",
@@ -248,26 +248,26 @@
        "</div>"
       ],
       "text/plain": [
-       "  city aqi           date    iaqi_h    iaqi_p  iaqi_pm10    iaqi_t    o3_avg  \\\n",
-       "0    2  16  1663027200000  0.296339 -0.769711  -0.228696  0.174822 -0.262875   \n",
-       "1    1   4  1662584400000  0.809041  1.236292  -0.415810 -2.566292 -0.047795   \n",
-       "2    1  19  1662940800000 -0.899964  0.344735   2.390909  0.723045  0.167284   \n",
-       "3    2   8  1662584400000 -0.764249  1.280870  -0.415810 -0.949035 -0.262875   \n",
-       "4    1  16  1662930000000 -1.101023  0.344735   1.829565  0.997157  0.167284   \n",
+       "  city aqi           date    iaqi_h    iaqi_p iaqi_pm10    iaqi_t    o3_avg  \\\n",
+       "0    2  16  1663027200000  0.296339 -0.769711 -0.228696  0.174822 -0.262875   \n",
+       "1    1   4  1662584400000  0.809041  1.236292  -0.41581 -2.566292 -0.047795   \n",
+       "2    1  19  1662940800000 -0.899964  0.344735  2.390909  0.723045  0.167284   \n",
+       "3    2   8  1662584400000 -0.764249   1.28087  -0.41581 -0.949035 -0.262875   \n",
+       "4    1  16  1662930000000 -1.101023  0.344735  1.829565  0.997157  0.167284   \n",
        "\n",
-       "     o3_max    o3_min  ...  windgust  windspeed   winddir  pressure  \\\n",
-       "0 -0.295896 -0.095551  ...  1.292511   0.494340 -0.629129 -0.946770   \n",
-       "1  0.430394  0.217162  ... -0.875157  -0.986137 -0.688734  1.135370   \n",
-       "2 -0.295896  0.686230  ... -0.610403  -0.512995 -0.757281  0.284408   \n",
-       "3 -0.295896  0.373518  ... -0.941345  -1.154026 -0.092678  1.244003   \n",
-       "4 -0.295896  0.686230  ... -0.701412  -0.757197 -0.761751  0.293461   \n",
+       "     o3_max    o3_min  ...  windgust windspeed   winddir  pressure cloudcover  \\\n",
+       "0 -0.295896 -0.095551  ...  1.292511   0.49434 -0.629129  -0.94677   1.251215   \n",
+       "1  0.430394  0.217162  ... -0.875157 -0.986137 -0.688734   1.13537  -1.721077   \n",
+       "2 -0.295896   0.68623  ... -0.610403 -0.512995 -0.757281  0.284408  -0.321398   \n",
+       "3 -0.295896  0.373518  ... -0.941345 -1.154026 -0.092678  1.244003   0.402761   \n",
+       "4 -0.295896   0.68623  ... -0.701412 -0.757197 -0.761751  0.293461   0.073106   \n",
        "\n",
-       "   cloudcover  visibility  solarradiation  solarenergy   uvindex  conditions  \n",
-       "0    1.251215   -1.073768       -1.719523    -1.726476 -1.878691           2  \n",
-       "1   -1.721077    0.602495        0.423267     0.419426  0.285561           0  \n",
-       "2   -0.321398   -1.937297       -0.079925    -0.048770  0.285561           0  \n",
-       "3    0.402761    0.602495        0.134522     0.107295  0.285561           0  \n",
-       "4    0.073106   -1.327747        0.011257     0.029262  0.285561           0  \n",
+       "  visibility solarradiation solarenergy   uvindex conditions  \n",
+       "0  -1.073768      -1.719523   -1.726476 -1.878691          2  \n",
+       "1   0.602495       0.423267    0.419426  0.285561          0  \n",
+       "2  -1.937297      -0.079925    -0.04877  0.285561          0  \n",
+       "3   0.602495       0.134522    0.107295  0.285561          0  \n",
+       "4  -1.327747       0.011257    0.029262  0.285561          0  \n",
        "\n",
        "[5 rows x 42 columns]"
       ]
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9154ae89",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
     "df_torch = SequenceDataset(\n",
     "    data = train_data,\n",
     "    target = 'aqi',\n",
-    "    sequence_length = \n",
+    "    sequence_length = 5\n",
     ")\n",
     "\n",
     "print(df_torch.X[0])\n",
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "57ab40ca",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
        " tensor(19.))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "40dcb399",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        " tensor(16.))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "487973e2",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "76ee5e11",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1023c0e6",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "19c00f46",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5e8c0236",
    "metadata": {},
    "outputs": [
@@ -664,34 +664,34 @@
      "text": [
       "Epoch 0\n",
       "---------\n",
-      "Train loss: 235.00010557969412\n",
+      "Train loss: 230.4072945912679\n",
       "Epoch 1\n",
       "---------\n",
-      "Train loss: 179.4264250434935\n",
+      "Train loss: 199.49027304848036\n",
       "Epoch 2\n",
       "---------\n",
-      "Train loss: 140.20139468709627\n",
+      "Train loss: 173.50038990626732\n",
       "Epoch 3\n",
       "---------\n",
-      "Train loss: 115.11905002593994\n",
+      "Train loss: 152.3059850037098\n",
       "Epoch 4\n",
       "---------\n",
-      "Train loss: 100.61249446868896\n",
+      "Train loss: 135.46838302413622\n",
       "Epoch 5\n",
       "---------\n",
-      "Train loss: 93.0257740020752\n",
+      "Train loss: 122.38609488805135\n",
       "Epoch 6\n",
       "---------\n",
-      "Train loss: 89.44295406341553\n",
+      "Train loss: 112.42339372634888\n",
       "Epoch 7\n",
       "---------\n",
-      "Train loss: 87.920982837677\n",
+      "Train loss: 104.97926163673401\n",
       "Epoch 8\n",
       "---------\n",
-      "Train loss: 87.34464907646179\n",
+      "Train loss: 99.51896635691325\n",
       "Epoch 9\n",
       "---------\n",
-      "Train loss: 87.15433208147685\n"
+      "Train loss: 95.58588027954102\n"
      ]
     }
    ],
@@ -703,17 +703,196 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ffdcd2f",
+   "id": "8b1ac919",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "## <span style=\"color:#ff5f27;\">👨🏻‍⚖️ Prediction </span>"
+    "## <span style='color:#ff5f27'>👮🏼‍♀️ Model Registry and Retrieval</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "id": "abd865eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected. Call `.close()` to terminate connection gracefully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr = project.get_model_registry()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "960842aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_schema': {'columnar_schema': [{'name': 'city', 'type': 'object'},\n",
+       "   {'name': 'date', 'type': 'object'},\n",
+       "   {'name': 'iaqi_h', 'type': 'object'},\n",
+       "   {'name': 'iaqi_p', 'type': 'object'},\n",
+       "   {'name': 'iaqi_pm10', 'type': 'object'},\n",
+       "   {'name': 'iaqi_t', 'type': 'object'},\n",
+       "   {'name': 'o3_avg', 'type': 'object'},\n",
+       "   {'name': 'o3_max', 'type': 'object'},\n",
+       "   {'name': 'o3_min', 'type': 'object'},\n",
+       "   {'name': 'pm10_avg', 'type': 'object'},\n",
+       "   {'name': 'pm10_max', 'type': 'object'},\n",
+       "   {'name': 'pm10_min', 'type': 'object'},\n",
+       "   {'name': 'pm25_avg', 'type': 'object'},\n",
+       "   {'name': 'pm25_max', 'type': 'object'},\n",
+       "   {'name': 'pm25_min', 'type': 'object'},\n",
+       "   {'name': 'uvi_avg', 'type': 'object'},\n",
+       "   {'name': 'uvi_max', 'type': 'object'},\n",
+       "   {'name': 'uvi_min', 'type': 'object'},\n",
+       "   {'name': 'tempmax', 'type': 'object'},\n",
+       "   {'name': 'tempmin', 'type': 'object'},\n",
+       "   {'name': 'temp', 'type': 'object'},\n",
+       "   {'name': 'feelslikemax', 'type': 'object'},\n",
+       "   {'name': 'feelslikemin', 'type': 'object'},\n",
+       "   {'name': 'feelslike', 'type': 'object'},\n",
+       "   {'name': 'dew', 'type': 'object'},\n",
+       "   {'name': 'humidity', 'type': 'object'},\n",
+       "   {'name': 'precip', 'type': 'object'},\n",
+       "   {'name': 'precipprob', 'type': 'object'},\n",
+       "   {'name': 'precipcover', 'type': 'object'},\n",
+       "   {'name': 'snow', 'type': 'object'},\n",
+       "   {'name': 'snowdepth', 'type': 'object'},\n",
+       "   {'name': 'windgust', 'type': 'object'},\n",
+       "   {'name': 'windspeed', 'type': 'object'},\n",
+       "   {'name': 'winddir', 'type': 'object'},\n",
+       "   {'name': 'pressure', 'type': 'object'},\n",
+       "   {'name': 'cloudcover', 'type': 'object'},\n",
+       "   {'name': 'visibility', 'type': 'object'},\n",
+       "   {'name': 'solarradiation', 'type': 'object'},\n",
+       "   {'name': 'solarenergy', 'type': 'object'},\n",
+       "   {'name': 'uvindex', 'type': 'object'},\n",
+       "   {'name': 'conditions', 'type': 'object'}]},\n",
+       " 'output_schema': {'columnar_schema': [{'name': 'aqi', 'type': 'object'}]}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from hsml.schema import Schema\n",
+    "from hsml.model_schema import ModelSchema\n",
+    "\n",
+    "input_schema = Schema(train_data.drop('aqi',axis=1))\n",
+    "output_schema = Schema(train_data.aqi)\n",
+    "model_schema = ModelSchema(input_schema=input_schema, output_schema=output_schema)\n",
+    "\n",
+    "model_schema.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d35f59b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ec9b7c0524649aa92966f91be2fb7f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model created, explore it at https://c.app.hopsworks.ai:443/p/167/models/pytorch_model/1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Model(name: 'pytorch_model', version: 1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_dir = \"./model\"\n",
+    "torch.save(model, model_dir)\n",
+    "\n",
+    "model_hops = mr.sklearn.create_model(\n",
+    "    name = \"pytorch_model\",\n",
+    "    #input_example = df_torch[5],\n",
+    "    model_schema = model_schema\n",
+    ")\n",
+    "\n",
+    "model_hops.save(model_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcd7133e",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color:#ff5f27;\">👨🚀 Fetch and test the model </span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6116c5c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading file ... "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LSTMModel(\n",
+       "  (lstm): LSTM(41, 16, num_layers=32, batch_first=True)\n",
+       "  (linear): Linear(in_features=16, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = mr.get_model(\"pytorch_model\", version = 1)\n",
+    "model_dir = model.download()\n",
+    "\n",
+    "model = torch.load(model_dir + '/model')\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "5aa69d85",
    "metadata": {},
    "outputs": [],
@@ -732,19 +911,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "adc3fa6b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12.,\n",
-       "        12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12., 12.,\n",
-       "        12., 12., 12., 12., 12., 12., 12., 12.])"
+       "tensor([10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.,\n",
+       "        10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.,\n",
+       "        10., 10., 10., 10., 10., 10., 10., 10.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +943,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -778,7 +957,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
