Some visual changes

--- a/4_model_training.ipynb
+++ b/4_model_training.ipynb
@@ -703,16 +703,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b1ac919",
+   "id": "4c5afe76",
    "metadata": {},
    "source": [
-    "## <span style='color:#ff5f27'>👮🏼‍♀️ Model Registry and Retrieval</span>"
+    "## <span style='color:#ff5f27'>👮🏼‍♀️ Model Registry</span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "abd865eb",
+   "id": "11f567bc",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "960842aa",
+   "id": "10c3663f",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d35f59b2",
+   "id": "b0444d0f",
    "metadata": {},
    "outputs": [
     {
@@ -849,16 +849,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd7133e",
+   "id": "246e05ca",
    "metadata": {},
    "source": [
-    "## <span style=\"color:#ff5f27;\">👨🚀 Fetch and test the model </span>"
+    "## <span style=\"color:#ff5f27;\">🚀 Fetch and test the model </span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6116c5c1",
+   "id": "27736a89",
    "metadata": {},
    "outputs": [
     {
